--- a/html/anasayfa.html
+++ b/html/anasayfa.html
@@ -9,62 +9,60 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Arvo&display=swap" rel="stylesheet">
   <link href="C:\Users\Teknik\Desktop\Batuhan\yeni site\assets\dtm.css" rel="stylesheet">
+  <link href='https://fonts.googleapis.com/css?family=Roboto:500,900,100,300,700,400' rel='stylesheet' type='text/css'>
   <script src="C:\Users\Teknik\Desktop\Batuhan\yeni site\assets\dtm.js"></script>
-  <title>Document</title>
+  <title>DTM ELEKTROTEKNİK A.Ş.</title>
   <style>
 
   </style>
 </head>
 
 <body>
-  <header class="sticky-top max-width bg-navb pb-1">
-    <div id="logo" class="container-fluid ">
-      <a class="navbar-brand" href="#">
-        <img src="C:\Users\Teknik\Desktop\Batuhan\yeni site\assets\img\dtm-logo.jpg" alt="logo" class="rounded">
-      </a>
-    </div>
-    <nav role="navigation" class="primary-navigation ">
-
-      <div class="">
-        <ul>
-          <li><a href="#">ANA SAYFA</a></li>
-          <li><a href="#">KURUMSAL</a></li>
-          <li><a href="#">ÜRÜNLER &dtrif;</a>
-            <ul class="dropdown">
-              <li><a href="#">AB-E AYDINLATMA BUSBAR (25A - 63A)</a></li>
-              <li><a href="#">SP-H ALÇAK GÜÇ BUSBAR (100A-160A)</a></li>
-              <li><a href="#">MP-H ORTA GÜÇ BUSBAR (160A-600A)</a></li>
-              <li><a href="#">HP-K YÜKSEK GÜÇ BUSBAR (400A-6300A)</a></li>
-            </ul>
-          </li>
-          <li><a href="#">HİZMETLER</a></li>
-          <li><a href="#">REFERANSLAR</a></li>
-          <li><a href="#">HABERLER</a></li>
-          <li><a href="#">İLETİŞİM</a></li>
-        </ul>
-      </div>
+  <section class="sticky-top" id="navbarat">
+    <nav class="blend ">
+      <!--<a class="navbar-brand" id="logo" href="#">
+        <img src="C:\Users\Teknik\Desktop\Batuhan\yeni site\assets\img\dtm-logo.png" alt="logo" class="rounded">
+      </a>-->
+      <ul>
+        <li><a href="#">ANA SAYFA</a></li>
+        <li><a href="#">ÜRÜNLER</a>
+          <ul class="dropdown">
+            <li><a href="#">AB-E AYDINLATMA BUSBAR (25A - 63A)</a></li>
+            <li><a href="#">SP-H ALÇAK GÜÇ BUSBAR (100A-160A)</a></li>
+            <li><a href="#">MP-H ORTA GÜÇ BUSBAR (160A-600A)</a></li>
+            <li><a href="#">HP-K YÜKSEK GÜÇ BUSBAR (400A-6300A)</a></li>
+          </ul>
+        </li>
+        <li><a href="#">KURUMSAL</a></li>
+        <li><a href="#">HİZMETLER</a></li>
+        <li><a href="#">REFERANSLAR</a></li>
+        <li><a href="#">İLETİŞİM</a></li>
+        <li><a href="#">HABERLER</a></li>
+        <li class="" id=""><a href="#">ENGLISH</a></li>
+      </ul>
     </nav>
-  </header>
-
+  </section>
 
   <div id="" class="">
   </div>
 
 
-  <div class="container align-self-center pt-3">
-    <div class="row" id="cards_landscape_wrap-2">
+  <div class="container align-self-center">
+    <div class="row align-self-center mx-auto" id="cards_landscape_wrap-2">
       <!-- CARD1 START-->
-      <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+      <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-lg-4">
         <a href="">
           <div class="card-flyer">
             <div class="text-box">
               <div class="image-box">
-                <img src="C:\Users\Teknik\Desktop\Batuhan\yeni site\assets\img\icon-kurumsal.jpg" alt="" />
+                <img src="http://www.dtmbusbar.com/data/dtm2017/upload_anasayfa/icon-kurumsal.jpg" alt="" />
               </div>
               <div class="text-container">
                 <h6>KURUMSAL</h6>
                 <p>DTM Elektroteknik A.Ş. 2000 yılından bu yana tecrübeli kadrosu ile 25A'den 6300A'e kadar busbar
-                  üretimi ile hizmet vermektedir.</p>
+                  üretimi ile hizmet vermektedir. Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
+                  doloremque sapiente, veniam rem neque ab quasi nobis. Facere harum magnam, necessitatibus ipsa
+                  suscipit error accusantium velit ea inventore </p>
               </div>
             </div>
           </div>
@@ -72,10 +70,51 @@
       </div>
       <!-- CARD1 END-->
       <!-- col-xs-12 col-sm-6 col-md-3 col-lg-3 -->
+      <!-- CARD2 START-->
+      <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-lg-4">
+        <div class="card-flyer">
+          <div class="text-box">
+            <div class="image-box">
+              <img src="http://www.dtmbusbar.com/data/dtm2017/upload_anasayfa/fuar-2022.jpg ">
+            </div>
+            <div class="text-container">
+              <h6>ÜRÜNLER</h6>
+              <p>25A - 6300A arası, yüksek kaliteli ve standartlara uygun üretilen Busbar Kanal Sistemleri hakkında
+                bilgi almak için bu bölümü ziyaret ediniz. <br>
+                <a href="">AB-E AYDINLATMA BUSBAR (25A - 63A)</a> <br>
+                <a href="">SP-H ALÇAK GÜÇ BUSBAR (100A-160A)</a> <br>
+                <a href="">MP-H ORTA GÜÇ BUSBAR (160A-600A)</a> <br>
+                <a href="">HP-K YÜKSEK GÜÇ BUSBAR (400A-6300A)</a>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- CARD2 END-->
+      <!-- CARD3 START-->
+      <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-lg-4">
+        <a href="">
+          <div class="card-flyer">
+            <div class="text-box">
+              <div class="image-box">
+                <img src="http://www.dtmbusbar.com/data/dtm2017/upload_anasayfa/icon-kurumsal.jpg" alt="" />
+              </div>
+              <div class="text-container">
+                <h6>hizmetler</h6>
+                <p>Satış öncesi ve satış sonrası hizmetleri mükemmel bir düzeyde vermek, DTM Elektroteknik A.Ş. için çok
+                  önemlidir. Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat soluta impedit, optio
+                  similique esse nemo provident temporibus officia sed illum tenetur labore, nobis quasi explicabo,
+                  cupiditate velit veniam sint veritatis!</p>
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
+      <!-- CARD3 END-->
       <!-- ACCORDION COL START-->
-      <section class="ac-container col-xs-12 col-sm-12 col-md-4 col-lg-4">
+      <section id="acccc" class="ac-container col-xs-12 col-sm-8 col-md-6 col-lg-4 ">
         <div>
-          <input id="ac-1" name="accordion-1" type="radio" >
+          <input id="ac-1" name="accordion-1" type="radio">
           <label for="ac-1">Alüminyum Kasa</label>
           <article class="ac-alk">
             <p>Hafif Ağırlık <br>
@@ -108,40 +147,82 @@
           <input id="ac-4" name="accordion-1" type="radio" checked="">
           <label for="ac-4">Uygulama Alanları</label>
           <article class="ac-uygl">
-            <p>Yüksek Binalar<br>Hastaneler<br>Sanayi Tesisleri<br>Oteller<br>Bankalar<br>Hava Alanları<br>Data Merkezleri<br>AVM Alışveriş Merkezleri</p>
+            <p>Yüksek Binalar<br>Hastaneler<br>Sanayi Tesisleri<br>Oteller<br>Bankalar<br>Hava Alanları<br>Data
+              Merkezleri<br>AVM Alışveriş Merkezleri</p>
           </article>
         </div>
       </section>
-
-        <!-- ACCORDION COL END-->
-
-      <!-- CARD2 START-->
-      <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-        <a href="">
-          <div class="card-flyer">
-            <div class="text-box">
-              <div class="image-box">
-                <img src="C:\Users\Teknik\Desktop\Batuhan\yeni site\assets\img\icon-hizmetler.jpg" alt="" />
+      <!-- ACCORDION COL END-->
+      <!-- OWL CAROUSEL START-->
+      <div class="col-lg-8 col-md-12 col-sm-8 col-sm-offset-2 col-xs-12 container  ">
+        <div id="owlcaro" class="carousel " data-bs-ride="carousel">
+          <div class="carousel-indicators ">
+            <button type="button" data-bs-target="#owlcaro" data-bs-slide-to="0" class="active" aria-current="true"
+              aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#owlcaro" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#owlcaro" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          </div>
+          <div class="carousel-inner ">
+            <div class="carousel-item active">
+              <img src="http://www.dtmbusbar.com/data/dtm2017/upload_carouselresim/icon-uygulama-otel.jpg"
+                class="d-block w-100" alt="">
+              <div class="carousel-caption d-none d-md-block">
+                <h3 class="">First slide label</h3>
+                <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore deleniti, totam ea
+                  cumque ut modi
+                  dolorum. Laboriosam quos repellendus dicta non dolor, placeat velit. Nam ut delectus tempora molestiae
+                  sit?</p>
               </div>
-              <div class="text-container">
-                <h6>hizmetler</h6>
-                <p>Satış öncesi ve satış sonrası hizmetleri mükemmel bir düzeyde vermek, DTM Elektroteknik A.Ş. için çok
-                  önemlidir.</p>
+            </div>
+            <div class="carousel-item">
+              <img src="http://www.dtmbusbar.com/data/dtm2017/upload_carouselresim/icon-uygulama-banka.jpg"
+                class="d-block w-100" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h3 class="">Second slide label</h3>
+                <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, minus! Officia
+                  veniam magni sit
+                  aliquam. Libero illo in, sint odio earum eaque quos, pariatur ex nesciunt voluptatibus aliquam dolor
+                  quo?</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="http://www.dtmbusbar.com/data/dtm2017/upload_carouselresim/icon-uygulama-havaalani.jpg"
+                class="d-block w-100" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h3 class="">Third slide label</h3>
+                <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam iusto ducimus ipsam
+                  culpa cupiditate.
+                  Doloremque non esse amet dignissimos iure explicabo, odio maxime, commodi recusandae ex, quis quidem
+                  consequatur incidunt.</p>
               </div>
             </div>
           </div>
-        </a>
+
+
+        </div>
+
+
+
+
+
       </div>
-      <!-- CARD2 END-->
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae dicta nisi eius obcaecati aliquid,
+        suscipit nobis dolore odit sint facere porro libero? Tempora hic quos fuga fugiat! Quidem, magni nisi. Lorem
+        ipsum dolor sit amet consectetur adipisicing elit. Ut dignissimos harum qui, ratione rem esse, sapiente
+        veritatis ullam delectus quibusdam aliquam cum omnis eaque obcaecati voluptates blanditiis deleniti eum officia!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur minus laudantium omnis impedit quos
+        repellat aliquam illo, dolore eaque, nam neque, similique totam alias soluta unde possimus vitae? Dolor,
+        ducimus. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus praesentium nisi assumenda voluptates?
+        Blanditiis voluptate possimus numquam, vel rerum, dicta repellat tempora consectetur id porro autem temporibus
+        quo nam natus? Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque unde repellendus dolorem, sunt id
+        error possimus? Dolores consectetur fugiat pariatur fugit, animi obcaecati vero optio? Voluptatem sint nam
+        mollitia nisi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam minima officiis laboriosam id
+        alias quia molestiae beatae autem in voluptatem sit earum, temporibus cumque fuga aut at odit illo ullam? Lorem
+        ipsum dolor sit amet consectetur adipisicing elit. Nulla temporibus delectus illum saepe excepturi totam, hic
+        laborum suscipit itaque. A numquam eaque dolor eum non tenetur reiciendis minima qui facilis! Lorem ipsum dolor
+        sit, amet consectetur adipisicing elit. Nihil placeat vel atque reiciendis illum. Magni cum cupiditate quis
+        voluptates quidem harum tenetur sapiente, esse deserunt fugiat excepturi? Deleniti, explicabo accusamus?</p>
 
-    </div>
-
-
-
-
-
-  </div>
-  </div>
 </body>
 
 </html>
